# quadeq

./: CMakeLists.txt  CMakePresets.json
cmake/: quadeq-config.cmake.in  utils.cmake
examples/add/: CMakeLists.txt  main.cpp
include/quadeq/: exception.hpp  export.h  solution.hpp  solution_builder.hpp  solver.hpp
src/: solution_builder.cpp  solutiuon.cpp  solver.cpp
